# modeling_match_dynamics

./: .gitignore  README.md  pyproject.toml
scripts/: audit_data_quality.py  build_football_sequences.py  build_nba_matched_dataset.py  inspect_nba_raw_sample.py  merge_football_data.py  process_football_merged.py  refresh_football_top50_thresholds.py  run_balanced_football_threshold_tuning.py  run_data_audit_ui.py  run_final_football_thresholds.py  run_football_calibration.py  run_football_error_analysis.py  run_football_feature_ablation.py  run_football_feature_engineering.py  run_football_historical_team_strength.py  run_football_pipeline.py  run_football_targeted_features.py  run_football_threshold_tuning.py  run_football_top50_retrain.py  run_nba.py  run_nba_pipeline.py  run_pipeline.py  train_football_lstm.py
src/match_dynamics/: __init__.py  audit.py  audit_ui.py  config.py  evaluation.py  football.py  football_calibration.py  football_error_analysis.py  football_event_processing.py  football_feature_engineering.py  football_lstm_ablation.py  football_lstm_training.py  football_targeted_features.py  football_targeted_training.py  football_threshold_tuning.py  models.py  nba.py  nba_merge_pipeline.py  pipeline.py  visualization.py
