[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modeling-match-dynamics"
version = "0.1.0"
description = "Football Events and NBA Movement Data match dynamics modeling pipeline."
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "tensorflow>=2.14",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
where = ["src"]
