[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modeling-match-dynamics"
version = "0.1.0"
description = "Football Events and NBA Movement Data match dynamics modeling pipeline."
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scikit-learn>=1.6",
    "tensorflow>=2.20",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.setuptools.packages.find]
where = ["src"]
